--- a/public/css/form.css
+++ b/public/css/form.css
@@ -27,11 +27,11 @@
     text-align:center;
 }
 .preview_images{
-    height: 200px;
+    height: auto;
 }
 .preview_images img{
     border: solid 1px;
     margin-left: 5px;
-    max-height: 100%;
-    max-width: 100%;
+    max-height: 30%;
+    max-width: 30%;
 }
