tao controller va view cho trang user.product, sua lai css cho phan hien thi anh trong trang admin, them route phuc vu cho viec tao trang user.product

--- a/public/css/form.css
+++ b/public/css/form.css
@@ -39,6 +39,8 @@
     display: inline-block;
     font-size: 0;
     height: auto;
+    width: 30%;
+    margin-left: 5px;
 }
 .preview_images img{
     max-height: 30%;
