--- a/public/css/product.css
+++ b/public/css/product.css
@@ -37,8 +37,11 @@
 .hidden{
     display: none;
 }
-
-h1{
-    margin-left: 30%;
-    margin-top: 30%;
+#example{
+    text-align: center;
+    vertical-align: middle;
+}
+#example h2{
+    color: #555555;
+    font-family: Montserrat-Regular;
 }
