--- a/public/css/checkout.css
+++ b/public/css/checkout.css
@@ -85,6 +85,9 @@ ul.checkout-bar li:nth-child(4):before {
 ul.checkout-bar li:nth-child(5):before {
     content: "5";
 }
+ul.checkout-bar li:nth-child(6):before {
+    content: "6";
+}
 ul.checkout-bar a {
     color: #57aed1;
     font-size: 16px;
@@ -140,14 +143,14 @@ ul.checkout-bar a {
         height: 15px;
         left: 0;
         position: absolute;
-        width: 13%;
+        width: 10%;
     }
     ul.checkout-bar li {
         display: inline-block;
         margin: 50px 0 0;
         padding: 0;
         text-align: center;
-        width: 30%;
+        width: 22%;
     }
     ul.checkout-bar li:before {
         height: 45px;
@@ -209,4 +212,26 @@ tr{
 }
 tr:first-child {
     border-top: none;
+}
+.content-box{
+    border: solid 1px lightgray;
+    width: 70%;
+    margin-left: 15%;
+    padding: 25px;
+    border-radius: 10px;
+}
+.content-box .head{
+    width: 30%;
+    padding-left: 2%;
+    color: gray;
+}
+
+.content-box .content{
+    width: 60%;
+    padding-left: 5%;
+}
+
+.content-box .change{
+    color: deepskyblue;
+    cursor: pointer;
 }
