--- a/public/css/form.css
+++ b/public/css/form.css
@@ -32,6 +32,8 @@
     border-radius: 10px;
     display: inline-block;
     vertical-align: bottom;
+    width: 30%;
+    margin-right: 2%;
 }
 .row-centered{
     text-align:center;
