--- a/public/css/form.css
+++ b/public/css/form.css
@@ -15,7 +15,7 @@
     min-height: 38px;
     border-radius: 2px;
 }
-.card {
+.panel-body .card {
     border-radius: 4px;
     background-color:  white;
     margin-left: 30px;
@@ -26,7 +26,7 @@
 .card-body {
     flex: 1 1 auto;
 }
-.btn {
+.panel-body .btn {
     font-size: 15px;
     font-weight: bold;
     border-radius: 10px;
